--- a/index.html
+++ b/index.html
@@ -131,11 +131,52 @@
         </div>
         <img src="img/play.png" alt="Video">
     </div>
-    
+
+    <div>
+        <img src="img/statistic.png" alt="statistic">
+        <div>
+            <h2>Limpon Is Suitable For Anytype LandingPage</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae reiciendis recusandae consequuntur, facere laudantium qui rem voluptatem laborum cumque magni quis alias hic? Libero unde cumque distinctio quam ut animi?</p>
+            <button type="button">get started now</button>
+        </div>
+    </div>
+
+    <div>
+        <div>
+            <h2>Easy To Etid & Very Easily Control</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae reiciendis recusandae consequuntur, facere laudantium qui rem voluptatem laborum cumque magni quis alias hic? Libero unde cumque distinctio quam ut animi?</p>
+            <button type="button">learn more</button>
+        </div>
+        <img src="img/statistic02.png" alt="statistic">
+    </div>
+
+    <div>
+        <div>
+            <span>screen preview</span>
+            <h2>Screenshot With Details</h2>
+            <img src="img/screen09-bg.png" alt="">
+        </div>
+    </div>
+
+    <div>
+        <span></span>
+        <h2></h2>
+        <div>
+            <p>It is a long established fact that a read her will be distracted by the readable content of a page when looking.</p>
+            <div>
+                <img src="img/profile-img.png" alt="">
+                <span>Rolin B. Mirano</span>
+                <span>ceo, uihub</span>
+            </div>
+        </div>
+    </div>
+
 
 
 
 </body>
+
+</html>
 
 </html>
 
