--- a/index.html
+++ b/index.html
@@ -168,16 +168,99 @@
                 <span>Rolin B. Mirano</span>
                 <span>ceo, uihub</span>
             </div>
+
+        </div>
+
+        <div>
+            <p>It is a long established fact that a read her will be distracted by the readable content of a page when looking.</p>
+            <div>
+                <img src="img/profile-img.png" alt="">
+                <span>Rolin B. Mirano</span>
+                <span>ceo, uihub</span>
+            </div>
+
+        </div>
+
+        <div>
+            <p>It is a long established fact that a read her will be distracted by the readable content of a page when looking.</p>
+            <div>
+                <img src="img/profile-img.png" alt="">
+                <span>Rolin B. Mirano</span>
+                <span>ceo, uihub</span>
+            </div>
+
+        </div>
+    </div>
+
+    <!-- Pricing Plans -->
+    <div>
+        <span></span>
+        <h2></h2>
+
+        <div>
+            <span>Free</span>
+            <span>starter</span>
+            <ul>
+                <li>Unlimited users Active</li>
+                <li>1 GB Bandwidth Speed</li>
+                <li>256 MB Memory Card</li>
+                <li>Free Domain Name</li>
+                <li>Free Domain Name</li>
+                <li>24x7 Online Support</li>
+            </ul>
+            <button type="submit">choose plan</button>
+        </div>
+
+        <div>
+            <span>$<span>90<span></span>/mo</span>
+            </span>
+            <span>starter</span>
+            <ul>
+                <li>Unlimited users Active</li>
+                <li>1 GB Bandwidth Speed</li>
+                <li>256 MB Memory Card</li>
+                <li>Free Domain Name</li>
+                <li>Free Domain Name</li>
+                <li>24x7 Online Support</li>
+            </ul>
+            <button type="submit">choose plan</button>
+        </div>
+
+        <div>
+            <span>$<span>350<span></span>/mo</span>
+            </span>
+            <span>starter</span>
+            <ul>
+                <li>Unlimited users Active</li>
+                <li>1 GB Bandwidth Speed</li>
+                <li>256 MB Memory Card</li>
+                <li>Free Domain Name</li>
+                <li>Free Domain Name</li>
+                <li>24x7 Online Support</li>
+            </ul>
+            <button type="submit">choose plan</button>
+        </div>
+
+        <div>
+            <span>$<span>90<span></span>/mo</span>
+            </span>
+            <span>starter</span>
+            <ul>
+                <li>Unlimited users Active</li>
+                <li>1 GB Bandwidth Speed</li>
+                <li>256 MB Memory Card</li>
+                <li>Free Domain Name</li>
+                <li>Free Domain Name</li>
+                <li>24x7 Online Support</li>
+            </ul>
+            <button type="submit">choose plan</button>
         </div>
     </div>
 
 
+    <!-- Our team -->
 
 
 </body>
-
-</html>
-
-</html>
 
 </html>
