--- a/index.html
+++ b/index.html
@@ -259,7 +259,55 @@
 
 
     <!-- Our team -->
+    <div>
+        <div>
+            <span>angels</span>
+            <h2>Our Team</h2>
+            <div>
+                <div><img src="img/team-img.png" alt=""></div>
+                <span>founder</span>
+                <span>Ricardo T. Obrien</span>
+                <div><img src="img/open-social-btn.png" alt="social"></div>
+            </div>
+        </div>
+        <div>
+            <span>angels</span>
+            <h2>Our Team</h2>
+            <div>
+                <div><img src="img/team-img.png" alt=""></div>
+                <span>ceo</span>
+                <span>Alberto Del Rio</span>
+                <div><img src="" alt="social"></div>
+            </div>
+        </div>
+        <div>
+            <span>angels</span>
+            <h2>Our Team</h2>
+            <div>
+                <div><img src="img/team-img.png" alt=""></div>
+                <span>designer</span>
+                <span>Thomas Alva Adison</span>
+                <div><img src="img/open-social-btn.png" alt="social"></div>
+            </div>
+        </div>
+    </div>
+    <!-- Contact Form -->
+    <div>
+        <img src="" alt="">
+        <h2>Start Your Free Trail No Need Credit Card.</h2>
+        <input type="tel" name="contact" id="">
+        <input type="email" name="contact" id="">
+        <textarea name="contact" id=""></textarea>
+        <button type="submit" name="contact"><img src="" alt="">submit now</button>
+    </div>
 
+    <!-- Footer -->
+    <div>
+        <div><span>Made With Love & Copyright By - </span><a href="#">limpon</a>
+            </span>
+        </div>
+        <div><img src="img/social.png" alt=""></div>
+    </div>
 
 </body>
 
