--- a/index.html
+++ b/index.html
@@ -295,10 +295,16 @@
     <div>
         <img src="" alt="">
         <h2>Start Your Free Trail No Need Credit Card.</h2>
-        <input type="tel" name="contact" id="">
-        <input type="email" name="contact" id="">
-        <textarea name="contact" id=""></textarea>
-        <button type="submit" name="contact"><img src="" alt="">submit now</button>
+
+        <form action="" name="contact">
+            <div>
+                <input type="text" name="contact" placeholder="Enter your name here">
+            </div>
+            <div><input type="email" name="contact" placeholder="Enter your email here"></div>
+            <div><textarea name="contact" placeholder="Enter your message here"></textarea></div>
+            <button type="submit" name="contact"><img src="" alt="">submit now</button>
+        </form>
+
     </div>
 
     <!-- Footer -->
